# iac-code

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/superpowers/specs/: 2026-05-15-qwenpaw-provider-alignment-design.md
readme/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.pt.md  README.zh.md
src/iac_code/: __init__.py  config.py
src/iac_code/a2a/: __init__.py  agent_card.py  app.py  artifacts.py  client.py  events.py  executor.py  metrics.py  parts.py  persistence.py  push.py  push_queue.py  push_secrets.py  push_worker.py  router.py  signing.py  task_store.py  transport.py  types.py
src/iac_code/acp/: session.py
src/iac_code/agent/: agent_loop.py  agent_tool.py  message.py  system_prompt.py
src/iac_code/cli/: headless.py  main.py  output_formats.py
src/iac_code/commands/: __init__.py  auth.py  clear.py  model.py  registry.py
src/iac_code/providers/: anthropic_provider.py  base.py  dashscope_provider.py  manager.py  openai_provider.py  registry.py  thinking.py
src/iac_code/services/: agent_factory.py  context_manager.py
src/iac_code/state/: app_state.py
src/iac_code/tools/: base.py
src/iac_code/types/: permissions.py  stream_events.py
tests/: test_config.py
tests/a2a/: fakes.py  test_agent_card.py  test_app.py  test_artifacts.py  test_client.py  test_events.py  test_executor.py  test_grpc_transport.py  test_http_transport.py  test_metrics.py  test_parts.py  test_persistence.py  test_push.py  test_push_queue.py  test_push_worker.py  test_redis_streams_transport.py  test_rest_binding.py  test_router.py  test_sdk_contract.py  test_signing.py  test_stdio_transport.py  test_task_store.py  test_transport.py  test_transport_base.py  test_transport_client_dispatch.py  test_transport_dispatcher.py  test_transport_registry.py  test_types.py  test_unix_transport.py  test_websocket_transport.py
tests/acp/: test_http_transport.py  test_sessions.py
tests/agent/: test_permission_scenarios.py  test_system_prompt.py
tests/cli/: test_a2a_command.py  test_acp_command.py  test_output_formats.py
tests/commands/: test_auth_flows.py  test_auth_third_party.py  test_config_llm_source.py  test_model.py
tests/integration/: test_chat_with_image.py
tests/providers/: test_anthropic_image_blocks.py  test_dashscope_provider.py  test_manager.py  test_openai_image_blocks.py  test_openai_provider.py
tests/state/: test_app_state.py
tests/test_agent/: test_image_block.py
tests/types/: test_permissions.py  test_permissions_types.py
tests/ui/: test_banner.py  test_bracketed_paste_image.py  test_image_paste_capability_gate.py  test_prompt_input_image_paste.py
tests/utils/: test_background_housekeeping.py  test_background_housekeeping_image.py
website/: docusaurus.config.ts  sidebars.ts
(+248 files in other folders)
