[project]
name = "iac_code"
dynamic = ["version"]
description = "Your AI-powered Infrastructure as Code assistant"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.0",
    "typer>=0.9.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.0",
    "openai>=1.50",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "jsonschema>=4.20",
    "alibabacloud-ros20190910>=3.0.0",
    "alibabacloud-credentials>=0.3.0",
    "loguru>=0.7.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "agent-client-protocol>=0.9.0",
    "pillow==12.2.0",
    "cryptography>=42.0",
    "keyring>=25.0",
    "tree-sitter>=0.23",
    "tree-sitter-bash>=0.23",
]

[project.optional-dependencies]
http = [
    "starlette>=0.39.0",
    "uvicorn[standard]>=0.30.0",
]
a2a = [
    "a2a-sdk[http-server,signing]>=1.0.2,<2",
    "cryptography>=42.0",
    "starlette>=0.39.0",
    "uvicorn[standard]>=0.30.0",
]
a2a-signing = [
    "a2a-sdk[signing]>=1.0.2,<2",
]
a2a-grpc = [
    "grpcio>=1.60.0",
    "grpcio-status>=1.60.0",
]
a2a-redis = [
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "ty>=0.0.34",
    "babel>=2.14.0",
    "pre-commit>=4.0",
    "pytest-xdist>=3.0",
    "pytest-cov>=5.0",
    "setuptools>=68.0",
    "wheel",
    "tomli>=2.0; python_version<\"3.11\"",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "iac_code.__version__"}

[tool.setuptools.package-data]
"iac_code" = [
    "**/*.yml",
    "**/*.yaml",
    "**/*.json",
    "**/*.md",
    "**/*.mo",
    "**/*.po",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["MANIFEST.in"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[project.scripts]
iac-code = "iac_code.cli.main:app"

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.coverage.run]
source_pkgs = ["iac_code"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "htmlcov"
